# dice_game

./: README.md  pyproject.toml
src/dice_game/: dice_game.py
